Removed unneeded code

--- a/src/components/MoneyField.astro
+++ b/src/components/MoneyField.astro
@@ -2,10 +2,9 @@
 type Props = {
   label: string;
   value?: string;
-  onChange?: (value: string) => void;
 };
 
-const { label, value, onChange } = Astro.props;
+const { label, value } = Astro.props;
 ---
 
 <div>
@@ -23,11 +22,6 @@ const { label, value, onChange } = Astro.props;
       name="price"
       id="price"
       value={value || ""}
-      on:change={(event) => {
-        const inputValue = event.target.value;
-        console.log("Input value:", inputValue); // For debugging
-        onChange?.(inputValue);
-      }}
       class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
       placeholder="0.00"
     />
